# mas-study

./: 4-10_deepseek_with_tool_and_streaming.py  4-11_yunwu_voice_agent.py  4-5_moonshot-image-to-text.py  4-7_deepseek_with_tool.py  4-8_deepseek_with_tool_and_pydantic.py  4-9_deepseek_json_output.py  5-2_calculate_contenxt_window.py  5-3_deepseek_chat_with_CoT_prompt.py  5-4_ReAct_and_CoT_to_write_business_form.py  5-5_async_coffee_shop.py  5-5_sync_coffee_shop.py  deepseek.py  deepseek_stream.py  main.py  moonshot-image-to-text.py  pyproject.toml
